cabal-version: 2.2
name:          Shpadoinkle-developer-tools
version:       0.0.0.1
category:      Web
author:        Isaac Shapira
maintainer:    isaac.shapira@platonic.systems
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
extra-source-files:
  README.md
synopsis:
  Chrome extension to aide in development
description:
  A chrome extension to make developing Shpadoinkle applications easier


source-repository head
  type: git
  location: https://gitlab.com/platonic/shpadoinkle.git


flag development
  description: Add instrumentation for development purposes.
  manual: True
  default: False


common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities


library
  import: ghc-options

  exposed-modules:
    Shpadoinkle.DeveloperTools

  other-modules:
    Main

  hs-source-dirs: ./.

  build-depends:
      Shpadoinkle
    , Shpadoinkle-backend-pardiff
    , Shpadoinkle-html
    , base >=4.12.0 && <4.16
    , containers
    , jsaddle
    , lens
    , pretty-show
    , stm
    , text
    , time
    , unliftio

  if !flag(development)
    cpp-options: -DDEVELOPMENT

  default-language: Haskell2010


executable devtools
  import: ghc-options

  main-is: Main.hs

  other-modules:
    Shpadoinkle.DeveloperTools

  hs-source-dirs: ./.

  ghcjs-options:
    -Wall
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -dedupe
    -O2

  build-depends:
      Shpadoinkle
    , Shpadoinkle-backend-pardiff
    , Shpadoinkle-html
    , base >=4.12.0 && <4.16
    , containers
    , jsaddle
    , lens
    , pretty-show
    , stm
    , text
    , time
    , unliftio

  default-language: Haskell2010
