cabal-version: 2.2
name:          swan
version:       0.1.0.0
build-type:    Simple
license:       GPL-3.0-or-later

executable swan
  main-is:             Main.hs
  default-extensions:  OverloadedStrings
                     , MultiParamTypeClasses
                     , GeneralizedNewtypeDeriving
                     , TypeApplications
                     , DeriveGeneric
                     , DataKinds
                     , KindSignatures
                     , ScopedTypeVariables
  build-depends:       base >=4.12 && <4.16
                     , transformers
                     , lens
                     , generic-lens
                     , containers
                     , text
                     , bytestring
                     , compactable
                     , ease
                     , these
                     , mtl
                     , stm
                     , unliftio
                     , jsaddle
                     , ghcjs-base
                     , ghcjs-dom
                     , time
                     , stm
                     , unliftio
                     , Shpadoinkle
                     , Shpadoinkle-html
                     , Shpadoinkle-lens
                     , Shpadoinkle-console
                     , Shpadoinkle-backend-pardiff
                     , Shpadoinkle-backend-static
                     , Shpadoinkle-backend-snabbdom
                     , Shpadoinkle-widgets
  default-language:  Haskell2010
