cabal-version:       2.4
name:                snowman
version:             0.1.0.0

executable snowman
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
   , Shpadoinkle
   , Shpadoinkle-backend-pardiff
   , Shpadoinkle-html
   , text
  hs-source-dirs:      src
  default-language:    Haskell2010
